<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.hexairbot.hexmini"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/isLeftHandedCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:button="@drawable/checkbox" />

    <TextView
        android:id="@+id/isLeftHandedTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/isLeftHandedCheckBox"
        android:layout_marginRight="@dimen/settings_h_gap"
        android:layout_toLeftOf="@+id/isLeftHandedCheckBox"
        android:text="@string/settings_item_left_handed"
        android:textColor="@color/white"
        android:textSize="@dimen/settings_indicator_text_size" />

    <SeekBar
        android:id="@+id/interfaceOpacitySeekBar"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/isLeftHandedCheckBox"
        android:layout_below="@+id/isLeftHandedCheckBox"
        android:layout_marginTop="@dimen/settings_v_gap"
        android:progressDrawable="@drawable/seekbar_image"
        android:thumb="@drawable/seekbar_thumb" 
        android:thumbOffset="0dp"  />

    <TextView
        android:id="@+id/interfaceOpacityTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/isLeftHandedTitleTextView"
        android:layout_alignTop="@+id/interfaceOpacitySeekBar"
        android:text="@string/settings_item_interface_opacity"
        android:textColor="@color/white"
        android:textSize="@dimen/settings_indicator_text_size" />

    <TextView
        android:id="@+id/interfaceOpacityValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/interfaceOpacityTitleTextView"
        android:layout_below="@+id/interfaceOpacityTitleTextView"
        android:text="50%"
        android:textColor="@color/orange"
        android:textSize="@dimen/settings_indicator_text_size" />

     <CheckBox
         android:id="@+id/isAccModeCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/interfaceOpacitySeekBar"
         android:layout_below="@+id/interfaceOpacitySeekBar"
         android:layout_marginTop="@dimen/settings_v_gap"
         android:button="@drawable/checkbox" />
     
     <TextView
         android:id="@+id/isAccModeTitleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/interfaceOpacityTitleTextView"
         android:layout_alignTop="@+id/isAccModeCheckBox"
         android:text="@string/settings_item_acc_mode"
         android:textColor="@color/white"
         android:textSize="@dimen/settings_indicator_text_size" />

</RelativeLayout>